--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
-.App {
-  text-align: center;
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App {
+  background-image: url('./bodybeer.jpeg');
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  text-align: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -15,17 +22,109 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  border-radius: 20px 8px 8px 20px;
+  margin: 0rem 3rem;
+
+  background-image: url('./herobeer.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-y: center;
+}
+
+.Nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
+}
+
+hero {
+  display: flex;
+  flex-direction: row;
+  place-items: flex-end;
+  justify-items: flex-end;
+  align-items: flex-end;
+  align-items: center;
+}
+
+h1 {
+  font-size: 15vh;
+}
+
+.ButtonBar {
+  background-color: rgba(240, 248, 255, 0.294);
+  display: flex;
+  flex-direction: row;
+  height: 60px;
+  place-items: center;
+  justify-items: center;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0rem 20rem;
+}
+
+h2 {
+  border-radius: 20px 8px 8px 20px;
+  margin: 2rem 3rem;
+  background-image: url('./confetti.gif');
+  background-color: khaki;
+  height: 80px;
+  place-items: center;
+  justify-items: center;
+  align-items: center;
+  justify-content: space-between;
+
+  font-weight: 2000;
+  font-size: 50px;
+  color: #f5d300;
+  padding: 2rem;
+}
+
+.MainField {
+  background-color: rgba(240, 248, 255, 0.294);
+  border-radius: 20px 8px 8px 20px;
+  margin: 2rem 3rem;
+  display: flex;
+  height: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 2rem;
+}
+
+/* ---------------- ELEMENTS ----------------------*/
+button {
+  font-weight: 800;
+  font-size: 15px;
+  color: #f5d300;
+
+  min-width: 100px;
+  margin: 0 3px 0 0;
+  padding: 10px 16px;
+  display: inline-block;
+
+  background: transparent;
+  background-color: #f5d4006c;
+
+  border-color: #f5d300;
+  border: 3px;
+  border-radius: 20px 8px 8px 20px;
+  border-radius: 8px;
+}
+
+button:hover {
+  border-color: #6b5f0d;
+  color: #050504;
+  background-color: #f5d300;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #61dafb77;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +134,27 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* ------------------Cards--------------------- */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 20%;
+  justify-content: space-between
+  
+}
+
+.resize {
+  width: 200px;
+  height: auto;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.container {
+  padding: 2px 16px;
+  
 }
